[WIP] Works on more tavern tests
- Added pattern validator
- Added patterns for 5000000 blocks
- Added bridge_api pattern tests - failing tests are marked with XFAIL
- Added marks to all tests

--- a/hivemind/tavern/test_bridge_api_get_profile.tavern.yaml
+++ b/hivemind/tavern/test_bridge_api_get_profile.tavern.yaml
@@ -1,14 +1,11 @@
 ---
-  test_name: Hivemind hive_api smoke test
-
-  marks:
-    - smoketest
+  test_name: Hivemind bridge_api.get_profile data pattern test
 
   includes:
     - !include common.yaml
 
   stages:
-    - name: db_head_state
+    - name: get_profile
       request:
         url: "{service.proto:s}://{service.server:s}:{service.port:d}/"
         method: POST
@@ -17,9 +14,11 @@
         json:
           jsonrpc: "2.0"
           id: 1
-          method: "hive.db_head_state"
-          params: {}
+          method: "bridge.get_profile"
+          params: {"account":"steemit"}
       response:
         status_code: 200
         verify_response_with:
-          function: validate_response:validate_response
+          function: validate_response:compare_response_with_pattern
+          extra_kwargs:
+            method: "bridge.get_profile"
