--- a/hivemind/tavern/test_follow_api_smoketest.tavern.yaml
+++ b/hivemind/tavern/test_follow_api_smoketest.tavern.yaml
@@ -1,6 +1,9 @@
 ---
   test_name: Hivemind follow_api.get_followers smoke test
 
+  marks:
+    - smoketest
+
   includes:
     - !include common.yaml
 
@@ -23,6 +26,9 @@
 
 ---
   test_name: Hivemind follow_api.get_following smoke test
+
+  marks:
+    - smoketest
 
   includes:
     - !include common.yaml
@@ -47,6 +53,9 @@
 ---
   test_name: Hivemind follow_api.get_follow_count smoke test
 
+  marks:
+    - smoketest
+
   includes:
     - !include common.yaml
 
@@ -69,6 +78,9 @@
 
 ---
   test_name: Hivemind follow_api.get_account_reputations smoke test
+
+  marks:
+    - smoketest
 
   includes:
     - !include common.yaml
@@ -93,6 +105,9 @@
 ---
   test_name: Hivemind follow_api.get_blog smoke test
 
+  marks:
+    - smoketest
+
   includes:
     - !include common.yaml
 
@@ -116,6 +131,9 @@
 ---
   test_name: Hivemind follow_api.get_blog_entries smoke test
 
+  marks:
+    - smoketest
+
   includes:
     - !include common.yaml
 
@@ -138,6 +156,9 @@
 
 ---
   test_name: Hivemind follow_api.get_reblogged_by smoke test
+
+  marks:
+    - smoketest
 
   includes:
     - !include common.yaml
