[WIP] More works on tavern tests
- Defined marks in proper way in pytest.ini.
- Added condenser_api pattern test yaml definitions.
- Changed xfail marks to failing marks.
- Update readme file with comments on marking.

--- a/hivemind/tavern/test_bridge_api_patterns.tavern.yaml
+++ b/hivemind/tavern/test_bridge_api_patterns.tavern.yaml
@@ -32,7 +32,7 @@
 
   marks:
     - patterntest
-    - xfail
+    - failing
 
   includes:
     - !include common.yaml
@@ -62,7 +62,7 @@
 
   marks:
     - patterntest
-    - xfail
+    - failing
 
   includes:
     - !include common.yaml
@@ -92,7 +92,7 @@
 
   marks:
     - patterntest
-    - xfail
+    - failing
 
   includes:
     - !include common.yaml
@@ -122,7 +122,7 @@
 
   marks:
     - patterntest
-    - xfail
+    - failing
 
   includes:
     - !include common.yaml
@@ -297,7 +297,7 @@
 
   marks:
     - patterntest
-    - xfail
+    - failing
 
   includes:
     - !include common.yaml
@@ -327,7 +327,7 @@
 
   marks:
     - patterntest
-    - xfail
+    - failing
 
   includes:
     - !include common.yaml
