--- a/hivemind/tavern/test_condenser_api_patterns.tavern.yaml
+++ b/hivemind/tavern/test_condenser_api_patterns.tavern.yaml
@@ -91,6 +91,7 @@
   marks:
     - patterntest
     - failing
+    - xfail
 
   includes:
     - !include common.yaml
@@ -121,6 +122,7 @@
   marks:
     - patterntest
     - failing
+    - xfail
 
   includes:
     - !include common.yaml
@@ -151,6 +153,7 @@
   marks:
     - patterntest
     - failing
+    - xfail
 
   includes:
     - !include common.yaml
@@ -181,6 +184,7 @@
   marks:
     - patterntest
     - failing
+    - xfail
 
   includes:
     - !include common.yaml
@@ -211,6 +215,7 @@
   marks:
     - patterntest
     - failing
+    - xfail
 
   includes:
     - !include common.yaml
@@ -241,6 +246,7 @@
   marks:
     - patterntest
     - failing
+    - xfail
 
   includes:
     - !include common.yaml
@@ -271,6 +277,7 @@
   marks:
     - patterntest
     - failing
+    - xfail
 
   includes:
     - !include common.yaml
@@ -301,6 +308,7 @@
   marks:
     - patterntest
     - failing
+    - xfail
 
   includes:
     - !include common.yaml
@@ -331,6 +339,7 @@
   marks:
     - patterntest
     - failing
+    - xfail
 
   includes:
     - !include common.yaml
@@ -390,6 +399,7 @@
   marks:
     - patterntest
     - failing
+    - xfail
 
   includes:
     - !include common.yaml
@@ -420,6 +430,7 @@
   marks:
     - patterntest
     - failing
+    - xfail
 
   includes:
     - !include common.yaml
@@ -450,6 +461,7 @@
   marks:
     - patterntest
     - failing
+    - xfail
 
   includes:
     - !include common.yaml
@@ -480,6 +492,7 @@
   marks:
     - patterntest
     - failing
+    - xfail
 
   includes:
     - !include common.yaml
@@ -510,6 +523,7 @@
   marks:
     - patterntest
     - failing
+    - xfail
 
   includes:
     - !include common.yaml
@@ -540,6 +554,7 @@
   marks:
     - patterntest
     - failing
+    - xfail
 
   includes:
     - !include common.yaml
@@ -657,6 +672,7 @@
   marks:
     - patterntest
     - failing
+    - xfail
 
   includes:
     - !include common.yaml
@@ -687,6 +703,7 @@
   marks:
     - patterntest
     - failing
+    - xfail
 
   includes:
     - !include common.yaml
