--- a/hivemind/tavern/test_database_api_patterns.tavern.yaml
+++ b/hivemind/tavern/test_database_api_patterns.tavern.yaml
@@ -4,6 +4,7 @@
   marks:
     - patterntest
     - failing
+    - xfail
 
   includes:
     - !include common.yaml
@@ -34,6 +35,7 @@
   marks:
     - patterntest
     - failing
+    - xfail
 
   includes:
     - !include common.yaml
