--- a/hivemind/tavern/test_tags_api_smoketest.tavern.yaml
+++ b/hivemind/tavern/test_tags_api_smoketest.tavern.yaml
@@ -29,6 +29,8 @@
 
   marks:
     - smoketest
+    - failing
+    - xfail
 
   includes:
     - !include common.yaml
@@ -159,6 +161,8 @@
 
   marks:
     - smoketest
+    - failing
+    - xfail
 
   includes:
     - !include common.yaml
