Fixed parameters for test: get_accounts

--- a/hivemind/tavern/test_condenser_api_patterns.tavern.yaml
+++ b/hivemind/tavern/test_condenser_api_patterns.tavern.yaml
@@ -671,8 +671,6 @@
 
   marks:
     - patterntest
-    - failing
-    - xfail
 
   includes:
     - !include common.yaml
@@ -688,7 +686,7 @@
           jsonrpc: "2.0"
           id: 1
           method: "condenser_api.get_accounts"
-          params: [ ["steemit"] ]
+          params: ["steemit"]
       response:
         status_code: 200
         verify_response_with:
