--- a/hivemind/tavern/test_condenser_api_smoketest.tavern.yaml
+++ b/hivemind/tavern/test_condenser_api_smoketest.tavern.yaml
@@ -553,8 +553,6 @@
 
   marks:
     - smoketest
-    - failing
-    - xfail
 
   includes:
     - !include common.yaml
@@ -570,7 +568,7 @@
           jsonrpc: "2.0"
           id: 1
           method: "condenser_api.get_accounts"
-          params: [["steemit"]]
+          params: ["steemit"]
       response:
         status_code: 200
         verify_response_with:
